--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "react-component-scaffold",
   "displayName": "React Component Scaffold",
-  "description": "Quickly create a react component with the right (opinionated) structure",
+  "description": "Quickly create React components with a clean folder structure in kebab-case",
   "version": "0.0.1",
+  "publisher": "kiratot",
+  "author": {
+    "name": "kiratot"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kiratot/react-component-scaffold"
+  },
+  "keywords": [
+    "react",
+    "react-native",
+    "component",
+    "scaffold",
+    "template",
+    "typescript",
+    "javascript"
+  ],
   "engines": {
-    "vscode": "^1.95.0"
+    "vscode": "^1.93.1"
   },
   "categories": [
+    "Snippets",
     "Other"
   ],
+  "icon": "images/icon.png",
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
@@ -41,7 +61,7 @@
     "clean": "rimraf dist"
   },
   "devDependencies": {
-    "@types/vscode": "^1.95.0",
+    "@types/vscode": "^1.93.1",
     "@types/mocha": "^10.0.9",
     "@types/node": "20.x",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
